@@ -10,6 +10,8 @@ manpages-fr-extra (20061006) unstable; urgency=low
      (Closes: #393648)
   * Corrections applied to most.1, thanks to Stephane Blondon and Gerard
     Delafond
+  * Disable {u,}mount.nfs manpages are they are not in Debian (see the
+    nfs-utils changelog)
 
  -- Thomas Huriaux <thomas.huriaux@gmail.com>  Fri,  6 Oct 2006 10:11:42 +0200
 
